# Kuznechik

./: CMakeLists.txt  README.md  funcs.c  main.c
include/: constants.h  funcs.hpp
testing/: CMakeLists.txt  tests.cpp
